[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.136", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
bytes = "1"
serde_json = "1"
rand = "0.7"

[dependencies.ed25519-dalek]
version = "1"
features = ["serde"]

