[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.136", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
webrtc = "0.4.0"
anyhow = "1.0.52"
serde_json = "1"
tokio = "1.17.0"
actix-cors = "0.6.0-beta.8"